--- a/client/src/App.css
+++ b/client/src/App.css
@@ -223,12 +223,28 @@ details > summary::-webkit-details-marker {
 }
 
 .swiper-slide {
-  width: 100%;
   height: 100%;
+  min-height: 185px;
+  width: 500px ;
 }
-/* .swiper-slide {
-  @apply bg-richblack-800 text-richblack-25 p-3 text-[14px];
-} */
+
+.swiper-slide > div {
+  height: 100%;
+  min-height: 185px;
+  width: 100%;
+}
+
+@media (max-width: 640px) {
+  .swiper {
+    height: auto;
+    min-height: 185px;
+  }
+  
+  .swiper-slide {
+    height: auto;
+    min-height: 185px;
+  }
+}
 /* Swiper CSS Ends */
 
 .blackButton {
